# src/main/kotlin/info/nukoneko/kidspos/server/controller/dto/request/SaleBean.kt
@@ -2,7 +2,6 @@ package info.nukoneko.kidspos.server.controller.dto.request
 
 data class SaleBean(
     val storeId: Int,
-    val staffBarcode: String? = null,
     val deposit: Int,
     val itemIds: String,
 )
